<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CocktailDetailsActivity"
    android:orientation="vertical"
    android:padding="@dimen/_35dp"
    android:background="@color/pink">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_the_home_page"
        android:id="@+id/btnGoBack"/>
    <ImageView
        android:id="@+id/ivCocktailPhotograph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/content_currently_available"
        android:adjustViewBounds="true"/>

    <TextView
        android:id="@+id/tvCocktailName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cocktail_name"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10dp"
        android:textSize="@dimen/_36sp"
        android:fontFamily="cursive"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/category"/>

        <TextView
            android:id="@+id/tvCocktailCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/iba"/>

        <TextView
            android:id="@+id/tvCocktailIBA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Alcoholic:"/>

        <TextView
            android:id="@+id/tvCocktailAlcoholic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/glass"/>

        <TextView
            android:id="@+id/tvCocktailGlass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/instructions"/>

        <TextView
            android:id="@+id/tvCocktailInstructions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

    </LinearLayout>
        <ListView
            android:id="@+id/lvCocktailIngridients"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </ListView>


</LinearLayout>