<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    android:padding="@dimen/_20dp"
    tools:context=".HostActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200dp"
        android:background="@drawable/rounded_layout"
        android:orientation="horizontal"
        android:padding="@dimen/_10dp">

        <ImageView
            android:id="@+id/ivRandomCocktail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/cocktail_shaker" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/chosen_drink_for_you"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sp" />

            <TextView
                android:id="@+id/tvRandomCocktailName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="@dimen/_24sp" />

            <Button
                android:id="@+id/btnCheckItOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/semi_transparent_pink"
                android:text="@string/check_it_out"
                android:textColor="@color/darker_pink" />

            <Button
                android:id="@+id/btnChangeIt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/semi_transparent_pink"
                android:text="@string/change_it"
                android:textColor="@color/darker_pink" />

        </LinearLayout>
    </LinearLayout>

    <AutoCompleteTextView
        android:id="@+id/actvSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Search for cocktails"
        android:completionThreshold="1"
        android:padding="@dimen/_10dp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_25dp"
        android:background="@drawable/rounded_layout"/>


</LinearLayout>